add_subdirectory(AffineToPipeline)
add_subdirectory(ArcToLLVM)
add_subdirectory(CalyxToFSM)
add_subdirectory(ConvertToArcs)
add_subdirectory(CalyxToHW)
add_subdirectory(ExportChiselInterface)
add_subdirectory(ExportVerilog)
add_subdirectory(FIRRTLToHW)
add_subdirectory(HWArithToHW)
add_subdirectory(HWToLLHD)
add_subdirectory(HWToSystemC)
add_subdirectory(HandshakeToFIRRTL)
add_subdirectory(HandshakeToHW)
add_subdirectory(LLHDToLLVM)
add_subdirectory(HWToLLVM)
add_subdirectory(CombToArith)
add_subdirectory(CombToLLVM)
add_subdirectory(MooreToCore)
add_subdirectory(SCFToCalyx)
add_subdirectory(PipelineToCalyx)
add_subdirectory(StandardToHandshake)
add_subdirectory(FSMToSV)
add_subdirectory(PipelineToHW)
