set(LLVM_LINK_COMPONENTS
  Support
)

add_circt_tool(circt-opt
  circt-opt.cpp

  DEPENDS
  SUPPORT_PLUGINS
)
llvm_update_compile_flags(circt-opt)
target_link_libraries(circt-opt
  PRIVATE
  CIRCTAffineToLoopSchedule
  CIRCTAnalysisTestPasses
  CIRCTArc
  CIRCTArcToLLVM
  CIRCTArcTransforms
  CIRCTCalyx
  CIRCTCalyxToHW
  CIRCTCalyxNative
  CIRCTCalyxToFSM
  CIRCTCalyxTransforms
  CIRCTComb
  CIRCTCombTransforms
  CIRCTConvertToArcs
  CIRCTDC
  CIRCTDCToHW
  CIRCTDCTransforms
  CIRCTDebug
  CIRCTEmit
  CIRCTESI
  CIRCTExportChiselInterface
  CIRCTExportVerilog
  CIRCTFIRRTL
  CIRCTFIRRTLToHW
  CIRCTFIRRTLTransforms
  CIRCTFSM
  CIRCTFSMTransforms
  CIRCTFSMToSV
  CIRCTHandshake
  CIRCTHandshakeToDC
  CIRCTHandshakeToHW
  CIRCTHandshakeTransforms
  CIRCTLLHD
  CIRCTLLHDToLLVM
  CIRCTHWToLLVM
  CIRCTCombToArith
  CIRCTCombToLLVM
  CIRCTLLHDTransforms
  CIRCTMoore
  CIRCTMooreToCore
  CIRCTMSFT
  CIRCTMSFTTransforms
  CIRCTHW
  CIRCTHWArith
  CIRCTHWArithToHW
  CIRCTHWToBTOR2
  CIRCTIbis
  CIRCTIbisTransforms
  CIRCTInteropDialect
  CIRCTHWToLLHD
  CIRCTHWToSystemC
  CIRCTHWToSV
  CIRCTHWTransforms
  CIRCTLoopSchedule
  CIRCTLoopScheduleToCalyx
  CIRCTLTL
  CIRCTSCFToCalyx
  CIRCTScheduling
  CIRCTSeq
  CIRCTSeqToSV
  CIRCTSeqTransforms
  CIRCTSimToSV
  CIRCTSSP
  CIRCTSSPTransforms
  CIRCTCFToHandshake
  CIRCTOM
  CIRCTOMTransforms
  CIRCTPipelineOps
  CIRCTPipelineToHW
  CIRCTPipelineTransforms
  CIRCTSV
  CIRCTSVTransforms
  CIRCTHWArith
  CIRCTSystemC
  CIRCTSystemCTransforms
  CIRCTTransforms
  CIRCTVerif
  CIRCTVerifToSV

  MLIRIR
  MLIRLLVMDialect
  MLIRMemRefDialect
  MLIROptLib
  MLIRParser
  MLIRFuncDialect
  MLIRSupport
  MLIRTransforms
  MLIRSCFDialect
  MLIREmitCDialect
  MLIRFuncInlinerExtension
  MLIRVectorDialect
)

export_executable_symbols_for_plugins(circt-opt)
