set(LLVM_LINK_COMPONENTS
  Support
)

add_llvm_tool(circt-reduce
 circt-reduce.cpp
 Reduction.cpp
 Tester.cpp
)
llvm_update_compile_flags(circt-reduce)
target_link_libraries(circt-reduce
  PRIVATE
  CIRCTAPInt
  CIRCTCalyx
  CIRCTESI
  CIRCTFIRRTL
  CIRCTFIRRTLTransforms
  CIRCTFSM
  CIRCTHandshake
  CIRCTLLHD
  CIRCTMSFT
  CIRCTHW
  CIRCTScheduling
  CIRCTSeq
  CIRCTStaticLogicOps
  CIRCTSV

  MLIRIR
  MLIRParser
  MLIRStandard
  MLIRSupport
  MLIRTransforms
  MLIRReduceLib
)
