set(LLVM_LINK_COMPONENTS
  Support
)

add_llvm_tool(circt-reduce
 circt-reduce.cpp
 Reduction.cpp
 Tester.cpp
)
llvm_update_compile_flags(circt-reduce)
target_link_libraries(circt-reduce
  PRIVATE
  CIRCTCalyx
  CIRCTESI
  CIRCTFIRRTL
  CIRCTFIRRTLTransforms
  CIRCTFSM
  CIRCTHandshake
  CIRCTLLHD
  CIRCTMoore
  CIRCTMSFT
  CIRCTHW
  CIRCTHWTransforms
  CIRCTScheduling
  CIRCTSeq
  CIRCTStaticLogicOps
  CIRCTHWArith
  CIRCTSV

  MLIRIR
  MLIRParser
  MLIRSupport
  MLIRTransforms
  MLIRReduceLib
)
